<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#EDEDE7"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="2dp">
        <TextView
            android:id="@+id/orderIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/order_id"
            android:textColor="@color/matte_black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/orderAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="2dp"
            android:text="@string/amount"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:text="@string/username"
            android:textColor="#2D6F69"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/mobileTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:text="@string/mobile"
            android:textColor="#2D6F69"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/orderDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:text="@string/order_date"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="6dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    style="@style/OrdersCategoryTextView"
                    android:background="@drawable/textview_orders_category"
                    android:text="@string/view_item"
                    android:textColor="#4979A9"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    style="@style/OrdersCategoryTextView"
                    android:background="@drawable/textview_orders_category"
                    android:text="@string/view_address"
                    android:textColor="#4979A9"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
