<?xml version="1.0" encoding="utf-8"?>

<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#546D86"
    android:padding="4dp">

    <ImageView
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:contentDescription="@string/putatoe"
        android:padding="4dp"
        android:src="@drawable/icon_putatoe"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="8dp"
            android:text="@string/putatoe_allcaps"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto"
            android:text="@string/one_solution"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</Toolbar>
