<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/profileDetailsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/profileTextViewFields"
            style="@style/ProfileDetailsFieldsLayout">

            <TextView
                style="@style/ProfileDetailsTextView"
                android:text="@string/first_name" />

            <TextView
                style="@style/ProfileDetailsTextView"
                android:text="@string/last_name" />

            <TextView
                style="@style/ProfileDetailsTextView"
                android:text="@string/state" />

            <TextView
                style="@style/ProfileDetailsTextView"
                android:text="@string/district" />

            <TextView
                style="@style/ProfileDetailsTextView"
                android:text="@string/user_id" />

            <TextView
                style="@style/ProfileDetailsTextView"
                android:text="@string/username" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileEditTextFields"
            style="@style/ProfileDetailsFieldsLayout">

            <EditText
                android:id="@+id/firstNameEditText"
                style="@style/ProfileDetailsEditText"
                android:background="@drawable/edit_text_profile"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/lastNameEditText"
                style="@style/ProfileDetailsEditText"
                android:background="@drawable/edit_text_profile"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/stateEditText"
                style="@style/ProfileDetailsEditText"
                android:background="@drawable/edit_text_profile"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/districtEditText"
                style="@style/ProfileDetailsEditText"
                android:background="@drawable/edit_text_profile"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/userIdEditText"
                style="@style/ProfileDetailsEditText"
                android:background="@drawable/edit_text_profile"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/usernameEditText"
                style="@style/ProfileDetailsEditText"
                android:background="@drawable/edit_text_profile"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_save_changes"
        android:backgroundTint="@color/army_green"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/save_changes"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileDetailsLayout"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>