<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="8dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            android:padding="2dp">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/product"
                app:layout_constraintBottom_toTopOf="@id/brandNameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/brandNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/none"
                android:textColor="#2A3F5F"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/itemNameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productImageView" />

            <TextView
                android:id="@+id/itemNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/product_name_hindi"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/brandNameTextView" />

            <TextView
                android:id="@+id/itemTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/item_type"
                android:textColor="#32496D"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemNameTextView" />

            <TextView
                android:id="@+id/itemPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/_0"
                android:textColor="@color/jet_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemTypeTextView" />

            <Button
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_share"
                android:contentDescription="@string/share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toEndOf="@id/inStockTextView"
                app:layout_constraintTop_toBottomOf="@id/itemPriceTextView"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/inStockTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/out_of_stock"
                android:textColor="#2A3F5F"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemPriceTextView" />

            <TextView
                android:id="@+id/unitCounterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/units"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inStockTextView" />

            <TextView
                android:id="@+id/qtyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/qty"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unitCounterTextView" />

            <Spinner
                android:id="@+id/quantitySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:prompt="@string/qty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/qtyTextView"
                app:layout_constraintTop_toBottomOf="@id/unitCounterTextView"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/qty"
                android:padding="4dp"
                android:text="@string/plus_sign"
                android:textColor="#607992"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>